fix: open reflection package for launcher jar